3822B1PE3/9_gelu_ocl/sarafanov_maxim/log.txt
In file included from /usr/include/CL/cl.h:20,
                 from /home/crazyproger/sandbox/gpu-2025/3822B1PE3/9_gelu_ocl/sarafanov_maxim/gelu_ocl.cpp:2:
/usr/include/CL/cl_version.h:22:104: note: ‘#pragma message: cl_version.h: CL_TARGET_OPENCL_VERSION is not defined. Defaulting to 300 (OpenCL 3.0)’
   22 | #pragma message("cl_version.h: CL_TARGET_OPENCL_VERSION is not defined. Defaulting to 300 (OpenCL 3.0)")
      |                                                                                                        ^
/home/crazyproger/sandbox/gpu-2025/3822B1PE3/9_gelu_ocl/sarafanov_maxim/gelu_ocl.cpp: In function ‘void InitOpenCL(int)’:
/home/crazyproger/sandbox/gpu-2025/3822B1PE3/9_gelu_ocl/sarafanov_maxim/gelu_ocl.cpp:44:26: error: ‘CL_DEVICE_GPU’ was not declared in this scope; did you mean ‘CL_DEVICE_TYPE’?
   44 |     clGetDeviceIDs(plat, CL_DEVICE_GPU, 0, nullptr, &num_devices);
      |                          ^~~~~~~~~~~~~
      |                          CL_DEVICE_TYPE
